--- a/sass/layout/_affair.scss
+++ b/sass/layout/_affair.scss
@@ -4,6 +4,11 @@
 
 .affair-lists {
     position: relative;
+    margin-right: 30px;
+    text-align: center;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .app {
@@ -19,13 +24,4 @@
     background-color: rgba(47, 48, 58, 0.8);
     padding-top: 27px;
     padding-bottom: 27px;
-}
-
-.affair-lists {
-    margin-right: 30px;
-    text-align: center;
-}
-
-.affair-lists:last-child {
-    margin-right: 0;
 }
