--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,13 +11,11 @@
     min-width: 200px;
     text-align: center;
     transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.btn-hero:hover,
-.btn-hero:focus {
-    color: $second-text-color;
-    background-color: $background-section-color;
-    /* transition: all 0.5s ease; */
+    &:hover,
+    &:focus {
+        color: $second-text-color;
+        background-color: $background-section-color;
+    }
 }
 
 .btn {
@@ -30,13 +28,12 @@
     border-radius: 6px;
     border: none;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn:hover,
-.btn:focus {
-    color: $white-color;
-    background-color: $hover-text-color;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    &:hover,
+    &:focus {
+        color: $white-color;
+        background-color: $hover-text-color;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
 }
 
 .modal-button {
@@ -56,8 +53,7 @@
     border-radius: 4px;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
-}
-
-.modal-button:hover {
-    background-color: $primary-text-color;
+    &::hover {
+        background-color: $primary-text-color;
+    }
 }
