--- a/sass/components/_social-link.scss
+++ b/sass/components/_social-link.scss
@@ -9,23 +9,21 @@
     border-radius: 50%;
     background-color: #F5F4FA;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-list-item:hover .social-list-icon {
-    fill: #fff;
+    &:hover {
+        fill: #fff;
+        background-color: $hover-text-color;
+    }
 }
 
 .social-list-icon {
     width: 20px;
     height: 20px;
     fill: #AFB1B8;
+    &:hover {
+        fill: #fff;
+    }
 }
 
-.social-list-icon:hover {
+.social-list-item:hover .social-list-icon {
     fill: #fff;
-}
-
-.social-list-link:hover {
-    fill: #fff;
-    background-color: $hover-text-color;
 }
