--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -5,10 +5,9 @@
 .client-item {
     width: calc((100% - 30px * 5) / 6);
     margin-right: 30px;
-}
-
-.client-item:last-child {
-    margin-right: 0;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .client-list-link {
@@ -20,19 +19,16 @@
     height: 90px;
     width: 100%;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-list-link:hover,
-.client-list-link:focus {
-    border-color: $hover-text-color;
-}
-
-.client-list-link svg {
-    fill: #AFB1B8;
-    transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-list-link:hover svg,
-.client-list-link:focus svg {
-    fill: $hover-text-color;
+    &:hover,
+    &:focus {
+        border-color: $hover-text-color;
+    }
+    & svg {
+        fill: #AFB1B8;
+        transition: fill 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &:hover svg,
+    &:focus svg {
+        fill: $hover-text-color;
+    }
 }
