--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -76,7 +76,7 @@ footer .container {
 }
 
 .footer-form {
-    padding-left: 93px;
+    margin-left: 88px;
 }
 
 .form-footer {
@@ -100,6 +100,7 @@ footer .container {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: transparent;
+    outline: none;
 }
 
 .footer-btn-form {
@@ -122,6 +123,7 @@ footer .container {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
 }
 
 .footer-btn-form:hover,
