--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,17 +7,16 @@ header {
 .list a {
     color: $primary-text-color;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: $hover-text-color;
+    }
 }
 
 .adress-link {
     font-weight: 500;
     display: flex;
     align-items: center;
-}
-
-.list a:hover,
-.list a:focus {
-    color: $hover-text-color;
 }
 
 /* Site nav  */
@@ -47,19 +46,9 @@ header .logo {
     align-items: center;
 }
 
-.site-nav {
-    display: flex;
-}
-
 nav {
     display: flex;
     align-items: center;
-}
-
-.site-nav li {
-    display: flex;
-    margin-right: 50px;
-    display: block;
 }
 
 .current::after {
@@ -74,22 +63,40 @@ nav {
     bottom: 0;
 }
 
-.site-nav-item a {
-    position: relative;
-    padding-bottom: 32px;
-}
-
-.site-nav .current {
-    color: $hover-text-color;
-}
-
-.site-nav li:last-child {
-    margin-right: 0;
+.site-nav {
+    display: flex;
+    & a {
+        color: $second-text-color;
+        font-size: 14px;
+        font-weight: 500;
+    }
+    &-item a {
+        position: relative;
+        padding-bottom: 32px;
+    }
+    &.link:hover,
+    &.link:focus {
+        color: $hover-text-color;
+    }
+    & li {
+        display: flex;
+        margin-right: 50px;
+        display: block;
+    }
+    & li:last-child {
+        margin-right: 0;
+    }
+    & .current {
+        color: $hover-text-color;
+    }
 }
 
 .auth-nav {
     display: flex;
     margin-left: auto;
+    & li:first-child {
+        margin-right: 50px;
+    }
 }
 
 .adress-link svg {
@@ -99,21 +106,6 @@ nav {
 
 .adress-link:hover svg {
     fill: currentColor;
-}
-
-.auth-nav li:first-child {
-    margin-right: 50px;
-}
-
-.site-nav a {
-    color: $second-text-color;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus {
-    color: $hover-text-color;
 }
 
 .section-title {
