--- a/sass/layout/_ideology.scss
+++ b/sass/layout/_ideology.scss
@@ -1,19 +1,30 @@
 .ideology {
     padding-bottom: 0;
-}
-
-.ideology-list {
-    display: flex;
-}
-
-.ideology-item::before {
-    display: block;
-    content: "";
-    height: 120px;
-    width: 100%;
-    background-color: #F5F4FA;
-    background-repeat: no-repeat;
-    background-position: center;
+    &-text {
+        font-weight: normal;
+        line-height: 1.715em;
+        letter-spacing: 0.04em;
+    }
+    &-list {
+        display: flex;
+    }
+    &-item {
+        width: 270px;
+        margin-right: 30px;
+        flex-wrap: wrap;
+    }
+    &-item:last-child {
+        margin-right: 0px;
+    }
+    &-item::before {
+        display: block;
+        content: "";
+        height: 120px;
+        width: 100%;
+        background-color: #F5F4FA;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
 }
 
 .antena::before {
@@ -30,20 +41,4 @@
 
 .cosmonaut::before {
     background-image: url(../images/astronaut.svg);
-}
-
-.ideology-item {
-    width: 270px;
-    margin-right: 30px;
-    flex-wrap: wrap;
-}
-
-.ideology-item:last-child {
-    margin-right: 0px;
-}
-
-.ideology-text {
-    font-weight: normal;
-    line-height: 1.715em;
-    letter-spacing: 0.04em;
 }
