--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -56,6 +56,15 @@ a {
   margin-bottom: 50px;
 }
 
+.wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.section-title {
+  color: #212121;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -69,22 +78,6 @@ header {
   border-bottom: 1px solid #ECECEC;
 }
 
-.list a {
-  color: #757575;
-  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.list a:hover, .list a:focus {
-  color: #2196F3;
-}
-
-.adress-link {
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-}
-
-/* Site nav  */
 .logo {
   margin-right: 93px;
   font-family: Raleway;
@@ -105,26 +98,9 @@ header .logo {
   color: #2196F3;
 }
 
-.wrapper {
-  display: flex;
-  align-items: center;
-}
-
 nav {
   display: flex;
   align-items: center;
-}
-
-.current::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background-color: #2196F3;
-  border-radius: 2px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
 }
 
 .site-nav {
@@ -160,6 +136,33 @@ nav {
   color: #2196F3;
 }
 
+.current::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: #2196F3;
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.list a {
+  color: #757575;
+  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list a:hover, .list a:focus {
+  color: #2196F3;
+}
+
+.adress-link {
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+
 .auth-nav {
   display: flex;
   margin-left: auto;
@@ -176,10 +179,6 @@ nav {
 
 .adress-link:hover svg {
   fill: currentColor;
-}
-
-.section-title {
-  color: #212121;
 }
 
 .filter {
@@ -337,7 +336,7 @@ nav {
   cursor: pointer;
 }
 
-.modal-button::hover {
+.modal-button:hover {
   background-color: #757575;
 }
 
