--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -55,3 +55,12 @@ a {
     font-size: 36px;
     margin-bottom: 50px;
 }
+
+.wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.section-title {
+    color: $second-text-color;
+}
