--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -53,7 +53,7 @@
     border-radius: 4px;
     transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
-    &::hover {
+    &:hover {
         background-color: $primary-text-color;
     }
 }
