--- a/sass/layout/_affair.scss
+++ b/sass/layout/_affair.scss
@@ -15,7 +15,7 @@
     position: absolute;
     text-align: center;
     width: 370px;
-    left: 1;
+    left: 1px;
     top: 222px;
     font-size: 16px;
     color: $white-color;
