--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,9 +2,12 @@
 @import 'base/common';
 @import './base/container';
 @import './layout/header';
+@import './components/logo';
+@import './components/navigations';
+@import './components/contacts';
 @import './layout/hero';
 @import './components/button';
-@import './layout/modal-form';
+@import './components/modal-form';
 @import './layout/affair';
 @import './layout/ideology';
 @import './layout/team';
