--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -2,6 +2,9 @@
 @import 'base/common';
 @import './base/container';
 @import './layout/header';
+@import './components/logo';
+@import './components/navigations';
+@import './components/contacts';
 @import './layout/gallery';
 @import './components/button';
 @import './layout/footer';
