--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -5,6 +5,8 @@
 @import './components/logo';
 @import './components/navigations';
 @import './components/contacts';
+@import './components/modal';
+@import './components/form';
 @import './layout/gallery';
 @import './components/button';
 @import './layout/footer';
