--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -181,6 +181,231 @@ nav {
   fill: currentColor;
 }
 
+.form-wrapper {
+  position: absolute;
+  top: 121px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 528px;
+  height: 598px;
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  animation: animate125 3000ms;
+}
+
+.form-wrapper-text {
+  text-align: center;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  color: #212121;
+}
+
+.modal-svg {
+  position: absolute;
+  top: 49%;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  margin-left: 12px;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  transition: opacity 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.wrapper-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-image: url(../images/close.svg);
+  width: 18px;
+  height: 18px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 5px 10px 0 #ccc;
+  background-color: transparent;
+}
+
+.modal-input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  padding-left: 32px;
+  margin-top: 4px;
+  outline: none;
+}
+
+.modal-form {
+  position: relative;
+  margin-bottom: 10px;
+  color: #757575;
+  font-size: 12px;
+}
+
+.modal-form:hover .modal-svg,
+.modal-form:focus-within .modal-svg {
+  fill: #2196F3;
+  transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form:hover .modal-input,
+.modal-form:focus-within .modal-input {
+  border-color: #2196F3;
+  transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.text-area {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 14px;
+  width: 448px;
+  height: 120px;
+  resize: none;
+  padding-top: 15px;
+  padding-left: 12px;
+  margin-top: 4px;
+  outline: none;
+}
+
+.text-area::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.checkbox-wrapper {
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.check-label {
+  margin-bottom: 15px;
+}
+
+.checkbox-input {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox-input:checked + .checkbox-label::before {
+  background-image: url("../images/mark.svg");
+  background-color: #2196F3;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.checkbox-label {
+  display: flex;
+}
+
+.checkbox-label::before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 15px;
+  background: #FFFFFF;
+  border: 1px solid #212121;
+  border-radius: 4px;
+  margin-right: 8px;
+}
+
+.checkbox-link {
+  color: #2196F3;
+  text-decoration: underline;
+  margin-left: 3px;
+}
+
+.footer-form {
+  margin-left: 88px;
+}
+
+.form-footer {
+  width: 570px;
+  display: flex;
+}
+
+.input-user-mail {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  outline: none;
+}
+
+.footer-btn-form {
+  font-style: normal;
+  font-weight: normal;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: bold;
+  width: 200px;
+  margin-left: 12px;
+  font-size: 16px;
+  padding-top: 10px;
+  padding-bottom: 6px;
+  padding-left: 36px;
+  background-color: #2196F3;
+  color: #fff;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
+}
+
+.footer-btn-form:hover,
+.footer-btn-form:focus {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.telegram::after {
+  display: inline-block;
+  content: "";
+  height: 23px;
+  width: 24px;
+  margin-left: 8px;
+  background-image: url(../images/telegram.svg);
+  background-repeat: no-repeat;
+}
+
 .filter {
   display: flex;
   margin-bottom: 34px;
@@ -415,71 +640,5 @@ footer .container {
 .footer-list-link:hover,
 .footer-list-link:focus {
   background-color: #2196F3;
-}
-
-.footer-form {
-  margin-left: 88px;
-}
-
-.form-footer {
-  width: 570px;
-  display: flex;
-}
-
-.input-user-mail {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  width: 358px;
-  height: 50px;
-  padding-left: 16px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  color: rgba(255, 255, 255, 0.6);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: transparent;
-  outline: none;
-}
-
-.footer-btn-form {
-  font-style: normal;
-  font-weight: normal;
-  display: flex;
-  align-items: center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  font-weight: bold;
-  width: 200px;
-  margin-left: 12px;
-  font-size: 16px;
-  padding-top: 10px;
-  padding-bottom: 6px;
-  padding-left: 36px;
-  background-color: #2196F3;
-  color: #fff;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-  outline: none;
-}
-
-.footer-btn-form:hover,
-.footer-btn-form:focus {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.telegram::after {
-  display: inline-block;
-  content: "";
-  height: 23px;
-  width: 24px;
-  margin-left: 8px;
-  background-image: url(../images/telegram.svg);
-  background-repeat: no-repeat;
 }
 /*# sourceMappingURL=portfolio.css.map */
