--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,23 +1,11 @@
-.form-wrapper {
-    position: absolute;
-    top: 121px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 528px;
-    height: 598px;
-    background-color: #fff;
-    padding: 40px;
+.modal-input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    animation: animate125 3000ms;
-    &-text {
-        text-align: center;
-        margin-bottom: 20px;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 20px;
-        color: $second-text-color;
-    }
+    width: 100%;
+    height: 40px;
+    padding-left: 32px;
+    margin-top: 4px;
+    outline: none;
 }
 
 .modal-form {
@@ -35,25 +23,6 @@
         border-color: $hover-text-color;
         transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
     }
-}
-
-.modal-svg {
-    position: absolute;
-    top: 49%;
-    left: 0;
-    width: 18px;
-    height: 18px;
-    margin-left: 12px;
-}
-
-.modal-input {
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    width: 100%;
-    height: 40px;
-    padding-left: 32px;
-    margin-top: 4px;
-    outline: none;
 }
 
 .text-area {
@@ -122,31 +91,68 @@
     margin-left: 3px;
 }
 
-.backdrop {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    top: 0;
-    left: 0;
-    transition: opacity 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+.footer-form {
+    margin-left: 88px;
 }
 
-.is-hidden {
-    opacity: 0;
-    visibility: hidden;
+.form-footer {
+    width: 570px;
+    display: flex;
 }
 
-.wrapper-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-image: url(../images/close.svg);
-    width: 18px;
-    height: 18px;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 5px 10px 0 #ccc;
+.input-user-mail {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: rgba(255, 255, 255, 0.6);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
     background-color: transparent;
+    outline: none;
+}
+
+.footer-btn-form {
+    font-style: normal;
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: bold;
+    width: 200px;
+    margin-left: 12px;
+    font-size: 16px;
+    padding-top: 10px;
+    padding-bottom: 6px;
+    padding-left: 36px;
+    background-color: $hover-text-color;
+    color: #fff;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
+}
+
+.footer-btn-form:hover,
+.footer-btn-form:focus {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.telegram::after {
+    display: inline-block;
+    content: "";
+    height: 23px;
+    width: 24px;
+    margin-left: 8px;
+    background-image: url(../images/telegram.svg);
+    background-repeat: no-repeat;
 }
