--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,10 +4,11 @@
 @import './layout/header';
 @import './components/logo';
 @import './components/navigations';
+@import './components/modal';
+@import './components/form';
 @import './components/contacts';
 @import './layout/hero';
 @import './components/button';
-@import './components/modal-form';
 @import './layout/affair';
 @import './layout/ideology';
 @import './layout/team';
