--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,6 @@ nav {
 }
 
 .site-nav li {
-  display: flex;
   margin-right: 50px;
   display: block;
 }
@@ -414,10 +413,15 @@ nav {
   text-align: center;
 }
 
-.hero-title {
+.hero-content {
   padding-top: 200px;
+  padding-bottom: 200px;
+  max-width: 696px;
   margin: 0 auto;
-  width: 696px;
+}
+
+.hero-title {
+  margin-bottom: 30px;
   color: #fff;
   font-family: Roboto;
   font-weight: 900;
@@ -427,29 +431,32 @@ nav {
   text-transform: uppercase;
 }
 
-.btn-hero {
-  display: inline-block;
-  color: #fff;
-  font-weight: 900;
-  background-color: #2196F3;
-  font-size: 18px;
-  line-height: 1.367;
-  padding: 10px 32px;
-  border-radius: 3px;
-  margin: 30px 0 200px 0;
+.btn {
+  display: flex;
+  justify-content: center;
   min-width: 200px;
-  text-align: center;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: #fff;
+  background-color: #2196F3;
+  outline: none;
   transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.btn-hero:hover, .btn-hero:focus {
-  color: #212121;
-  background-color: #F5F4FA;
+.btn:hover, .btn:focus {
+  transform: scale(1.1);
 }
 
-.btn {
+.btn-filter {
   color: #212121;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -459,33 +466,10 @@ nav {
   transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn:hover, .btn:focus {
+.btn-filter:hover, .btn-filter:focus {
   color: #fff;
   background-color: #2196F3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.modal-button {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  display: block;
-  margin: 0 auto;
-  color: #fff;
-  background-color: #2196F3;
-  border: none;
-  padding-top: 10px;
-  padding-right: 55px;
-  padding-bottom: 10px;
-  padding-left: 55px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
-
-.modal-button:hover {
-  background-color: #757575;
 }
 
 .affair-list {
@@ -494,6 +478,7 @@ nav {
 
 .affair-lists {
   position: relative;
+  width: 370px;
   margin-right: 30px;
   text-align: center;
 }
@@ -505,9 +490,10 @@ nav {
 .app {
   position: absolute;
   text-align: center;
-  width: 370px;
-  left: 1px;
-  top: 222px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  font-weight: 700;
   font-size: 16px;
   color: #fff;
   letter-spacing: 0.03em;
@@ -569,7 +555,7 @@ nav {
 
 .team {
   display: flex;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
 }
 
 .team-list {
@@ -579,6 +565,7 @@ nav {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   padding-bottom: 30px;
+  background-color: #fff;
 }
 
 .team-list:last-child {
@@ -606,7 +593,6 @@ nav {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background-color: #F5F4FA;
   transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -618,7 +604,7 @@ nav {
 .social-list-icon {
   width: 20px;
   height: 20px;
-  fill: #AFB1B8;
+  fill: #afb1b8;
 }
 
 .social-list-icon:hover {
@@ -692,7 +678,7 @@ address p {
 }
 
 footer {
-  background-color: #2F303A;
+  background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -705,10 +691,12 @@ footer .container {
 
 .footer-link {
   margin-left: 70px;
+  width: 270px;
 }
 
 .footer-adress address {
   margin-top: 20px;
+  width: 270px;
 }
 
 .footer-list svg {
