--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -123,7 +123,6 @@ nav {
 }
 
 .site-nav li {
-  display: flex;
   margin-right: 50px;
   display: block;
 }
@@ -504,29 +503,32 @@ nav {
   transition: all 0.75s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-hero {
-  display: inline-block;
-  color: #fff;
-  font-weight: 900;
-  background-color: #2196F3;
-  font-size: 18px;
-  line-height: 1.367;
-  padding: 10px 32px;
-  border-radius: 3px;
-  margin: 30px 0 200px 0;
+.btn {
+  display: flex;
+  justify-content: center;
   min-width: 200px;
-  text-align: center;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: #fff;
+  background-color: #2196F3;
+  outline: none;
   transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.btn-hero:hover, .btn-hero:focus {
-  color: #212121;
-  background-color: #F5F4FA;
+.btn:hover, .btn:focus {
+  transform: scale(1.1);
 }
 
-.btn {
+.btn-filter {
   color: #212121;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -536,33 +538,10 @@ nav {
   transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn:hover, .btn:focus {
+.btn-filter:hover, .btn-filter:focus {
   color: #fff;
   background-color: #2196F3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.modal-button {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  display: block;
-  margin: 0 auto;
-  color: #fff;
-  background-color: #2196F3;
-  border: none;
-  padding-top: 10px;
-  padding-right: 55px;
-  padding-bottom: 10px;
-  padding-left: 55px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
-
-.modal-button:hover {
-  background-color: #757575;
 }
 
 address a {
@@ -590,7 +569,7 @@ address p {
 }
 
 footer {
-  background-color: #2F303A;
+  background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -603,10 +582,12 @@ footer .container {
 
 .footer-link {
   margin-left: 70px;
+  width: 270px;
 }
 
 .footer-adress address {
   margin-top: 20px;
+  width: 270px;
 }
 
 .footer-list svg {
