--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,59 +1,40 @@
-.btn-hero {
-    display: inline-block;
-    color: $white-color;
-    font-weight: 900;
-    background-color: $hover-text-color;
-    font-size: 18px;
-    line-height: 1.367;
-    padding: 10px 32px;
-    border-radius: 3px;
-    margin: 30px 0 200px 0;
-    min-width: 200px;
-    text-align: center;
-    transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
-    &:hover,
-    &:focus {
-        color: $second-text-color;
-        background-color: $background-section-color;
-    }
-}
-
 .btn {
-    color: $second-text-color;
-    background-color: #F5F4FA;
-    font-family: Roboto;
-    font-weight: 500;
-    font-size: 16px;
-    padding: 6px 12px;
-    border-radius: 6px;
-    border: none;
-    transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        color: $white-color;
-        background-color: $hover-text-color;
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+  display: flex;
+  justify-content: center;
+  min-width: 200px;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: $white-color;
+  background-color: $hover-text-color;
+  outline: none;
+  transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
 }
 
-.modal-button {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    display: block;
-    margin: 0 auto;
-    color: #fff;
+.btn-filter {
+  color: $second-text-color;
+  background-color: #f5f4fa;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: none;
+  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $white-color;
     background-color: $hover-text-color;
-    border: none;
-    padding-top: 10px;
-    padding-right: 55px;
-    padding-bottom: 10px;
-    padding-left: 55px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-    &:hover {
-        background-color: $primary-text-color;
-    }
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
