--- a/sass/layout/_affair.scss
+++ b/sass/layout/_affair.scss
@@ -1,27 +1,29 @@
 .affair-list {
-    display: flex;
+  display: flex;
 }
 
 .affair-lists {
-    position: relative;
-    margin-right: 30px;
-    text-align: center;
-    &:last-child {
-        margin-right: 0;
-    }
+  position: relative;
+  width: 370px;
+  margin-right: 30px;
+  text-align: center;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .app {
-    position: absolute;
-    text-align: center;
-    width: 370px;
-    left: 1px;
-    top: 222px;
-    font-size: 16px;
-    color: $white-color;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    background-color: rgba(47, 48, 58, 0.8);
-    padding-top: 27px;
-    padding-bottom: 27px;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  font-weight: 700;
+  font-size: 16px;
+  color: $white-color;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
