--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,76 +1,78 @@
 address a {
-    margin-bottom: 8px;
-    display: block;
-    font-style: normal;
-    color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 8px;
+  display: block;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 address p {
-    color: $white-color;
-    font-style: normal;
-    margin-bottom: 10px;
+  color: $white-color;
+  font-style: normal;
+  margin-bottom: 10px;
 }
 
 .footer-text {
-    color: $white-color;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 20px;
+  color: $white-color;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 footer {
-    background-color: #2F303A;
-    padding-top: 60px;
-    padding-bottom: 60px;
+  background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 footer .container {
-    display: flex;
-    align-items: center;
-    align-items: baseline;
+  display: flex;
+  align-items: center;
+  align-items: baseline;
 }
 
 .footer-link {
-    margin-left: 70px;
+  margin-left: 70px;
+  width: 270px;
 }
 
 .footer-adress address {
-    margin-top: 20px;
+  margin-top: 20px;
+  width: 270px;
 }
 
 .footer-list svg {
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .footer-list {
-    display: flex;
-    width: 206px;
-    justify-content: space-between;
+  display: flex;
+  width: 206px;
+  justify-content: space-between;
 }
 
 .footer-list-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    border: 0;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  border: 0;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list-link svg {
-    fill: $white-color;
+  fill: $white-color;
 }
 
 .footer-list-link:hover,
 .footer-list-link:focus {
-    background-color: $hover-text-color;
+  background-color: $hover-text-color;
 }
