--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,26 +1,27 @@
 .team {
-    display: flex;
-    background-color: #F5F4FA;
-    &-list {
-        width: 270px;
-        margin-right: 30px;
-        text-align: center;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-        padding-bottom: 30px;
-    }
-    &-list:last-child {
-        margin-right: 0;
-    }
-    &-text {
-        color: $primary-text-color;
-        margin-bottom: 16px;
-    }
+  display: flex;
+  background-color: #f5f4fa;
+  &-list {
+    width: 270px;
+    margin-right: 30px;
+    text-align: center;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    padding-bottom: 30px;
+    background-color: #fff;
+  }
+  &-list:last-child {
+    margin-right: 0;
+  }
+  &-text {
+    color: $primary-text-color;
+    margin-bottom: 16px;
+  }
 }
 
 .social-list {
-    display: flex;
-    width: 190px;
-    margin: 0 auto;
-    justify-content: space-between;
+  display: flex;
+  width: 190px;
+  margin: 0 auto;
+  justify-content: space-between;
 }
