--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,48 @@ a {
   color: #212121;
 }
 
+@media screen and (min-width: 480px) {
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .menu-wrapper {
+    display: none;
+    position: absolute;
+    top: 95px;
+    left: 0;
+    background-color: #ffffff;
+    width: 480px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu-wrapper.is-open {
+    display: block;
+    display: flex;
+  }
+  .auth-nav.list {
+    margin-left: 0;
+    margin-top: 5px;
+    padding-bottom: 60px;
+  }
+  .site-nav-item {
+    margin-bottom: 40px;
+    text-align: center;
+    margin-right: 0;
+  }
+  .auth-nav-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -72,10 +114,23 @@ a {
   padding-right: 15px;
 }
 
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+
 header {
   background-color: #fff;
   padding: 25px 0;
   border-bottom: 1px solid #ECECEC;
+  position: relative;
 }
 
 .logo {
@@ -103,10 +158,6 @@ nav {
   align-items: center;
 }
 
-.site-nav {
-  display: flex;
-}
-
 .site-nav a {
   color: #212121;
   font-size: 14px;
@@ -123,7 +174,6 @@ nav {
 }
 
 .site-nav li {
-  margin-right: 50px;
   display: block;
 }
 
@@ -154,6 +204,18 @@ nav {
 
 .list a:hover, .list a:focus {
   color: #2196F3;
+}
+
+@media screen and (min-width: 480px) {
+  .site-nav {
+    max-width: 480px;
+  }
+  .auth-nav {
+    max-width: 480px;
+  }
+  .site-nav-item a {
+    padding-bottom: 8px;
+  }
 }
 
 .form-wrapper {
@@ -188,6 +250,23 @@ nav {
   margin-left: 12px;
 }
 
+.text-area {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 14px;
+  width: 448px;
+  height: 120px;
+  resize: none;
+  padding-top: 15px;
+  padding-left: 12px;
+  margin-top: 4px;
+  outline: none;
+}
+
+.text-area::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
 .backdrop {
   position: fixed;
   width: 100%;
@@ -217,6 +296,12 @@ nav {
   background-color: transparent;
 }
 
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .checkbox-label {
+    font-size: 12px;
+  }
+}
+
 .modal-input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -244,23 +329,6 @@ nav {
 .modal-form:focus-within .modal-input {
   border-color: #2196F3;
   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.text-area {
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  font-size: 14px;
-  width: 448px;
-  height: 120px;
-  resize: none;
-  padding-top: 15px;
-  padding-left: 12px;
-  margin-top: 4px;
-  outline: none;
-}
-
-.text-area::placeholder {
-  color: rgba(117, 117, 117, 0.5);
 }
 
 .checkbox-wrapper {
@@ -313,15 +381,6 @@ nav {
   color: #2196F3;
   text-decoration: underline;
   margin-left: 3px;
-}
-
-.footer-form {
-  margin-left: 88px;
-}
-
-.form-footer {
-  width: 570px;
-  display: flex;
 }
 
 .input-user-mail {
@@ -387,15 +446,6 @@ nav {
   align-items: center;
 }
 
-.auth-nav {
-  display: flex;
-  margin-left: auto;
-}
-
-.auth-nav li:first-child {
-  margin-right: 50px;
-}
-
 .adress-link svg {
   fill: currentColor;
   margin-right: 10px;
@@ -408,8 +458,6 @@ nav {
 .hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-img.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  /* background-attachment: fixed; */
   text-align: center;
 }
 
@@ -429,6 +477,29 @@ nav {
   line-height: 1.367;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 480px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mobile.jpg);
+    max-width: 480px;
+    background-position: center, center;
+    margin: 0 auto;
+  }
+  -title {
+    font-size: 42px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .hero-title {
+    font-size: 26px;
+    font-weight: 600;
+  }
+  .hero-content {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
 }
 
 .btn {
@@ -472,6 +543,31 @@ nav {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.burger-button {
+  position: relative;
+  z-index: 100;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-btn-close {
+  display: none;
+}
+
+.burger-button.is-open .menu-btn-close {
+  display: block;
+}
+
+.burger-button.is-open .menu-btn-open {
+  display: none;
+}
+
+@media screen and (min-width: 767px) {
+  .burger-button {
+    display: none;
+  }
+}
+
 .affair-list {
   display: flex;
 }
@@ -503,6 +599,12 @@ nav {
   padding-bottom: 27px;
 }
 
+@media screen and (max-width: 767px) {
+  .affair {
+    display: none;
+  }
+}
+
 .ideology {
   padding-bottom: 0;
 }
@@ -511,16 +613,6 @@ nav {
   font-weight: normal;
   line-height: 1.715em;
   letter-spacing: 0.04em;
-}
-
-.ideology-list {
-  display: flex;
-}
-
-.ideology-item {
-  width: 270px;
-  margin-right: 30px;
-  flex-wrap: wrap;
 }
 
 .ideology-item:last-child {
@@ -553,8 +645,19 @@ nav {
   background-image: url(../images/astronaut.svg);
 }
 
+@media screen and (min-width: 480px) {
+  .ideology-item h3 {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .ideology-text {
+    margin-bottom: 60px;
+  }
+}
+
 .team {
-  display: flex;
   background-color: #f5f4fa;
 }
 
@@ -564,7 +667,6 @@ nav {
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  padding-bottom: 30px;
   background-color: #fff;
 }
 
@@ -582,6 +684,18 @@ nav {
   width: 190px;
   margin: 0 auto;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 767px) {
+  .team-list {
+    width: 450px;
+  }
+  .team-list img {
+    width: 100%;
+  }
+  .team-list:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .social-list-link {
@@ -615,19 +729,6 @@ nav {
   fill: #fff;
 }
 
-.client-list {
-  display: flex;
-}
-
-.client-item {
-  width: calc((100% - 30px * 5) / 6);
-  margin-right: 30px;
-}
-
-.client-item:last-child {
-  margin-right: 0;
-}
-
 .client-list-link {
   display: flex;
   justify-content: center;
@@ -651,6 +752,20 @@ nav {
 .client-list-link:hover svg,
 .client-list-link:focus svg {
   fill: #2196F3;
+}
+
+@media screen and (min-width: 480px) {
+  .client-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .client-item {
+    width: 210px;
+  }
+  .client-item:not(:nth-last-child(-n +2)) {
+    margin-bottom: 30px;
+  }
 }
 
 address a {
@@ -684,14 +799,8 @@ footer {
 }
 
 footer .container {
-  display: flex;
   align-items: center;
   align-items: baseline;
-}
-
-.footer-link {
-  margin-left: 70px;
-  width: 270px;
 }
 
 .footer-adress address {
@@ -730,5 +839,29 @@ footer .container {
 .footer-list-link:hover,
 .footer-list-link:focus {
   background-color: #2196F3;
+}
+
+@media screen and (max-width: 767px) {
+  footer {
+    text-align: center;
+  }
+  .footer-link {
+    margin: 0 auto;
+    width: 206px;
+    margin-bottom: 60px;
+    margin-top: 60px;
+  }
+  .logo {
+    margin: 0;
+    font-size: 24px;
+  }
+  address {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .input-user-mail {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
