--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,3 +4,15 @@
     padding-left: 15px;
     padding-right: 15px;
 }
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+    .container {
+        width: 480px;
+        margin: 0 auto;
+    }
+}
