--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -38,3 +38,28 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
+
+.burger-button {
+  position: relative;
+  z-index: 100;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-btn-close {
+  display: none;
+}
+
+.burger-button.is-open .menu-btn-close {
+  display: block;
+}
+
+.burger-button.is-open .menu-btn-open {
+  display: none;
+}
+
+@media screen and (min-width: 767px) {
+  .burger-button {
+    display: none;
+  }
+}
