--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -25,22 +25,6 @@
     }
 }
 
-.text-area {
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    font-size: 14px;
-    width: 448px;
-    height: 120px;
-    resize: none;
-    padding-top: 15px;
-    padding-left: 12px;
-    margin-top: 4px;
-    outline: none;
-    &::placeholder {
-        color: rgba(117, 117, 117, 0.5);
-    }
-}
-
 .checkbox-wrapper {
     display: flex;
     align-items: center;
@@ -91,15 +75,13 @@
     margin-left: 3px;
 }
 
-.footer-form {
-    margin-left: 88px;
-}
-
-.form-footer {
-    width: 570px;
-    display: flex;
-}
-
+// .footer-form {
+//     margin-left: 88px;
+// }
+// .form-footer {
+//     width: 570px;
+//     display: flex;
+// }
 .input-user-mail {
     font-family: Roboto;
     font-style: normal;
