--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,6 +29,22 @@
     margin-left: 12px;
 }
 
+.text-area {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    font-size: 14px;
+    width: 448px;
+    height: 120px;
+    resize: none;
+    padding-top: 15px;
+    padding-left: 12px;
+    margin-top: 4px;
+    outline: none;
+    &::placeholder {
+        color: rgba(117, 117, 117, 0.5);
+    }
+}
+
 .backdrop {
     position: fixed;
     width: 100%;
@@ -56,4 +72,17 @@
     cursor: pointer;
     box-shadow: 0 5px 10px 0 #ccc;
     background-color: transparent;
+}
+
+@media screen and (min-width: 480px) and (max-width:1199px) {
+    // .form-wrapper,
+    //     {
+    //     width: 450px;
+    // }
+    // .text-area {
+    //     width: 370px;
+    // }
+    .checkbox-label {
+        font-size: 12px;
+    }
 }
