--- a/sass/layout/_affair.scss
+++ b/sass/layout/_affair.scss
@@ -27,3 +27,9 @@
   padding-top: 27px;
   padding-bottom: 27px;
 }
+
+@media screen and (max-width: 767px) {
+  .affair {
+    display: none;
+  }
+}
