--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,15 +1,13 @@
-.client-list {
-    display: flex;
-}
-
-.client-item {
-    width: calc((100% - 30px * 5) / 6);
-    margin-right: 30px;
-    &:last-child {
-        margin-right: 0;
-    }
-}
-
+// .client-list {
+//     display: flex;
+// }
+// .client-item {
+//     width: calc((100% - 30px * 5) / 6);
+//     margin-right: 30px;
+//     &:last-child {
+//         margin-right: 0;
+//     }
+// }
 .client-list-link {
     display: flex;
     justify-content: center;
@@ -30,5 +28,31 @@
     &:hover svg,
     &:focus svg {
         fill: $hover-text-color;
+    }
+}
+
+// @media screen and (min-width:480px) {
+//     .client-list {
+//         display: flex;
+//         flex-wrap: wrap;
+//     }
+//     .client-item {
+//         width: calc ((100% - 30px * 1) / 2);
+//         &:not(:nth-child(2n)) {
+//             margin-right: 30px;
+//         }
+//     }
+// }
+@media screen and (min-width:480px) {
+    .client-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .client-item {
+        width: 210px;
+    }
+    .client-item:not(:nth-last-child(-n +2)) {
+        margin-bottom: 30px;
     }
 }
