--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,6 @@
 .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-img.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* background-attachment: fixed; */
+    background-repeat: no-repeat; // background-size: cover;
     text-align: center;
 }
 
@@ -22,4 +20,27 @@
     line-height: 1.367;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+}
+
+@media screen and (min-width: 480px) {
+    .hero {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mobile.jpg);
+        max-width: 480px;
+        background-position: center, center;
+        margin: 0 auto;
+    }
+    &-title {
+        font-size: 42px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .hero-title {
+        font-size: 26px;
+        font-weight: 600;
+    }
+    .hero-content {
+        padding-top: 118px;
+        padding-bottom: 118px;
+    }
 }
