--- a/sass/layout/_ideology.scss
+++ b/sass/layout/_ideology.scss
@@ -4,15 +4,14 @@
         font-weight: normal;
         line-height: 1.715em;
         letter-spacing: 0.04em;
-    }
-    &-list {
-        display: flex;
-    }
-    &-item {
-        width: 270px;
-        margin-right: 30px;
-        flex-wrap: wrap;
-    }
+    } // &-list {
+    //     display: flex;
+    // }
+    // &-item {
+    //     width: 270px;
+    //     margin-right: 30px;
+    //     flex-wrap: wrap;
+    // }
     &-item:last-child {
         margin-right: 0px;
     }
@@ -41,4 +40,16 @@
 
 .cosmonaut::before {
     background-image: url(../images/astronaut.svg);
+}
+
+@media screen and (min-width:480px) {
+    .ideology-item h3 {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .ideology-text {
+        margin-bottom: 60px;
+    }
 }
